Added parser options

--- a/WepApp_Parse_Urals/appsettings.json
+++ b/WepApp_Parse_Urals/appsettings.json
@@ -9,5 +9,10 @@
   "Console": {
     "IncludeScopes": true
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ParserOptions": {
+    "URL": "https://data.gov.ru/opendata/7710349494-urals",
+    "Type": "opendata",
+    "Token": "80f009db8264e10369004be939ccbdbd"
+  }
 }
